--- a/ArsaRExCH/Components/Account/Pages/Login.razor
+++ b/ArsaRExCH/Components/Account/Pages/Login.razor
@@ -90,8 +90,13 @@
         var result = await SignInManager.PasswordSignInAsync(Input.Email, Input.Password, Input.RememberMe, lockoutOnFailure: false);
         if (result.Succeeded)
         {
-            Logger.LogInformation("User logged in.");
-            RedirectManager.RedirectTo(ReturnUrl);
+            var user = await SignInManager.UserManager.FindByEmailAsync(Input.Email);
+            if (user != null)
+            {
+                user.LastLoginDate = DateTime.UtcNow; // Update last login date
+                await SignInManager.UserManager.UpdateAsync(user); // Save changes to the database
+            }
+
         }
         else if (result.RequiresTwoFactor)
         {
