--- a/ArsaRExCH/Components/Account/Pages/Login.razor
+++ b/ArsaRExCH/Components/Account/Pages/Login.razor
@@ -4,7 +4,7 @@
 @using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
 @using ArsaRExCH.Data
-
+@using Microsoft.AspNetCore.Mvc
 @inject SignInManager<ApplicationUser> SignInManager
 @inject ILogger<Login> Logger
 @inject NavigationManager NavigationManager
@@ -82,7 +82,7 @@
             await HttpContext.SignOutAsync(IdentityConstants.ExternalScheme);
         }
     }
-
+  
     public async Task LoginUser()
     {
         // This doesn't count login failures towards account lockout
@@ -95,6 +95,8 @@
             {
                 user.LastLoginDate = DateTime.UtcNow; // Update last login date
                 await SignInManager.UserManager.UpdateAsync(user); // Save changes to the database
+                Logger.LogInformation("User logged in.");
+                RedirectManager.RedirectTo(ReturnUrl);
             }
 
         }
