--- a/ArsaRExCH/Components/Account/Pages/Login.razor
+++ b/ArsaRExCH/Components/Account/Pages/Login.razor
@@ -93,6 +93,7 @@
             var user = await SignInManager.UserManager.FindByEmailAsync(Input.Email);
             if (user != null)
             {
+                // if u want to track all dates ant not onlly last login then new class need
                 user.LastLoginDate = DateTime.UtcNow; // Update last login date
                 await SignInManager.UserManager.UpdateAsync(user); // Save changes to the database
                 Logger.LogInformation("User logged in.");
