--- a/ArsaRExCH/Components/Account/Pages/Login.razor
+++ b/ArsaRExCH/Components/Account/Pages/Login.razor
@@ -10,6 +10,7 @@
 @inject NavigationManager NavigationManager
 @inject IdentityRedirectManager RedirectManager
 @inject ApplicationDbContext _context
+@inject ArsaRExCH.Interface.BetInterface _face
 <PageTitle>Log in</PageTitle>
 
 <h1>Log in</h1>
@@ -53,7 +54,6 @@
             </EditForm>
         </section>
     </div>
-
 </div>
 
 @code {
@@ -76,7 +76,7 @@
             await HttpContext.SignOutAsync(IdentityConstants.ExternalScheme);
         }
     }
-  
+
     public async Task LoginUser()
     {
         // This doesn't count login failures towards account lockout
@@ -89,10 +89,16 @@
             {
                 user.LastLoginDate = DateTime.UtcNow; // Update last login date
                 await SignInManager.UserManager.UpdateAsync(user);
+
+                var ipAddress = await _face.GetClientIpAddress();
+
+
+                // Create a new UserDatesRecord
                 var userDatesRecord = new UserDatesRecord
                     {
                         UserLoggedInDates = DateTime.UtcNow,
-                        ApplicationUserId = user.Id
+                        ApplicationUserId = user.Id,
+                        UserIpAdressX = ipAddress // Save the IP address
                     };
 
                 // Save the login record
