--- a/ArsaRExCH/Components/Pages/Home.razor
+++ b/ArsaRExCH/Components/Pages/Home.razor
@@ -1,25 +1,33 @@
 ﻿@page "/"
-
 @using Microsoft.AspNetCore.Authorization
-@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@using Microsoft.AspNetCore.Components
 @inject NavigationManager NavigationManager
-@using System.Security.Claims
-@inject AuthenticationStateProvider _AuthenticationStateProvider
-@inject HttpClient Http
-@inject ArsaRExCH.Interface.WalletInterface<double> _face
-@using ArsaRExCH.Components.MyComponents
-
+@inject IHttpContextAccessor HttpContextAccessor
+@using System.Net
+@using System.Net.Sockets
+@inject ArsaRExCH.Interface.BetInterface _face
 <style>
     .win-container {
-        border: 2px solid #000; /* Black border with 2px thickness */
-        padding: 2px; /* Optional: Add padding inside the border */
-        border-radius: 5px; /* Optional: Add rounded corners */
-        display: inline-block; /* Ensure the div sizes itself to the content */
-
+        border: 2px solid #000;
+        padding: 2px;
+        border-radius: 5px;
+        display: inline-block;
     }
 </style>
 
-
 <div class="win-container">
-  <Win></Win>
+   <ArsaRExCH.Components.MyComponents.Win></ArsaRExCH.Components.MyComponents.Win>
+    <p>Your IP Address: @ipadress</p>
 </div>
+
+@code {
+    public string ipadress { get; set; }        
+
+    protected override async void OnInitialized()
+    {
+        // Fetch the client's IP address
+        ipadress = await _face.GetClientIpAddress();
+    }
+
+   
+}
