--- a/ArsaRExCH/Components/Account/Pages/Login.razor
+++ b/ArsaRExCH/Components/Account/Pages/Login.razor
@@ -88,7 +88,15 @@
 
         //call database 
         // Check if the IP address is banned
-   
+
+        //You are banned from accessing this service.
+        string cheCkIt = await _userFace.CheckIfIpIsBanned(userPublicIp);
+        if (cheCkIt == "You are banned from accessing this service.")
+        {
+            errorMessage = "Banned Country IP , Change IP ,Use VPN";
+            return;
+        }
+
         // This doesn't count login failures towards account lockout
         // To enable password failures to trigger account lockout, set lockoutOnFailure: true
         var result = await SignInManager.PasswordSignInAsync(Input.Email, Input.Password, Input.RememberMe, lockoutOnFailure: false);
