cs error message

--- a/ArsaRExCH/Components/Account/Pages/Login.razor
+++ b/ArsaRExCH/Components/Account/Pages/Login.razor
@@ -90,7 +90,7 @@
         
         if (cheCkIt == "You are banned from accessing this service.")
         {
-            errorMessage = "Banned Country IP , Change IP ,Use VPN";
+            errorMessage = "Error ,Banned Country IP , Change IP ,Use VPN";
             return;
         }
 
