--- a/ArsaRExCH/Components/MyComponents/MostInzetByUsers.razor
+++ b/ArsaRExCH/Components/MyComponents/MostInzetByUsers.razor
@@ -1,4 +1,5 @@
-﻿@inject ArsaRExCH.Interface.UserIpInterface _user
+﻿@page "/max-inzet"
+@inject ArsaRExCH.Interface.UserIpInterface _user
 @using ArsaRExCH.Model
 @using ArsaRExCH.DTOs
 @using ArsaRExCH.Components.Pages
