--- a/ArsaRExCH/Components/Layout/MainLayout.razor
+++ b/ArsaRExCH/Components/Layout/MainLayout.razor
@@ -66,7 +66,7 @@
             <a href="wallets">Wallet</a>
             <a href="AddMoneyBank">Deposit Money</a>
             <a href="Bet1">Bet</a>
-
+            <a href="AdminPanel">Admin Panel</a>
             <!-- Tab 4 with hover effect to show more tabs -->
             <div class="tab-container">
                 <a  class="main-tab">User Information</a>
