--- a/ArsaRExCH/Components/AdminComponents/BannedCountryPanel.razor
+++ b/ArsaRExCH/Components/AdminComponents/BannedCountryPanel.razor
@@ -8,8 +8,7 @@
 @using System.Text.Json
 @inject ArsaRExCH.Interface.AdministrationInterface _adminInterface
 @rendermode InteractiveServer
-@attribute [Authorize]
-
+@attribute [Authorize(Roles = "Admin")]
 <div class="container">
     <h3 class="text-center mt-4">Manage Banned Countries</h3>
 
@@ -129,16 +128,16 @@
     private bool isFormVisible2 = false;
     protected override async Task OnInitializedAsync()
     {
-        BannedCOuntryList = await _adminInterface.GetAllBannedCountriesInDatabase();
+       // BannedCOuntryList = await _adminInterface.GetAllBannedCountriesInDatabase();
     }
     private void ToggleForm()
     {
         isFormVisible = !isFormVisible;
     }
     private async void ToggleForm2()
-    {
+    { BannedCOuntryList=await _adminInterface.GetAllBannedCountriesInDatabase();
         isFormVisible2 = !isFormVisible2;
-       await _adminInterface.GetAllBannedCountriesInDatabase();
+       
  
        // isFormVisible2 = false;
      
@@ -148,6 +147,8 @@
         await _adminInterface.AddBannCountries(banedCountry);
         banedCountry = new BanedCountries();
         isFormVisible = false;
+       // BannedCOuntryList = await _adminInterface.GetAllBannedCountriesInDatabase();
+
     }
     private async Task RemoveCountry(int banedCountriesId)
     {
