--- a/ArsaRExCH/Components/AdminComponents/WalletForUser.razor
+++ b/ArsaRExCH/Components/AdminComponents/WalletForUser.razor
@@ -41,6 +41,7 @@ else
                         <td>@wallet.Network</td>
                         <td>@wallet.CurrentBalance</td>
                         <td>@wallet.Amount</td>
+                        <td>Action need</td>
                     </tr>
                 }
             </tbody>
