--- a/ArsaRExCH/Components/AdminComponents/UserProfile.razor
+++ b/ArsaRExCH/Components/AdminComponents/UserProfile.razor
@@ -133,8 +133,11 @@
     {
         <p>Loading user information...</p>
     }
+    <hr style="color:red" />
     <WalletForUser id="@userID"></WalletForUser>
+    <hr style="color:red" />
     <UserBetHistoryAdmin userIDd="@userID"></UserBetHistoryAdmin>
+    <hr style="color:red" />
 </div>
 
 
