--- a/ArsaRExCH/Components/Pages/AdminPanel.razor
+++ b/ArsaRExCH/Components/Pages/AdminPanel.razor
@@ -45,7 +45,7 @@
 
     private string[] links = new string[]
     {
-        "/BannedCountry", "/UserInformation", "/Add Pair", "/BetListAdmin", "/page5",
+        "/BannedCountry", "/UserInformation", "/Add Pair", "/BetListAdmin", "/Roles",
         "/page6", "/page7", "/page8", "/page9", "/page10",
         "/page11", "/page12", "/page13", "/page14", "/page15"
     };
