Most Inzet added cmpinent to home page

--- a/ArsaRExCH/Components/MyComponents/MostInzetByUsers.razor
+++ b/ArsaRExCH/Components/MyComponents/MostInzetByUsers.razor
@@ -5,7 +5,7 @@
 @using ArsaRExCH.Components.MyComponents
 @rendermode InteractiveServer
 
-<h3>Max Inzet Results</h3>
+<h3>Most Inzet</h3>
 
 @if (isLoading)
 {
