--- a/ArsaRExCH/Components/MyComponents/Win.razor
+++ b/ArsaRExCH/Components/MyComponents/Win.razor
@@ -9,7 +9,7 @@
 @using ArsaRExCH.Components.MyComponents
 
 
-
+<h4>Winners</h4>
 <style>
     .bet-grid {
         display: grid;
@@ -31,7 +31,7 @@
 }
 else if (userTotalWinningAmounts.Count == 0)
 {
-    <p>No winning amounts found.</p> <!-- Debug message if no data -->
+    <p>No Winners</p> <!-- Debug message if no data -->
 }
 else
 {
