--- a/ArsaRExCH/Components/Pages/Home.razor
+++ b/ArsaRExCH/Components/Pages/Home.razor
@@ -24,10 +24,12 @@
 
 <div class="win-container">
    <ArsaRExCH.Components.MyComponents.Win></ArsaRExCH.Components.MyComponents.Win>
-
+   <hr />
+   
 
 </div>
-<p>Your IP Address: @ipadress</p>
+<ArsaRExCH.Components.MyComponents.MostInzetByUsers></ArsaRExCH.Components.MyComponents.MostInzetByUsers>
+
 <p>Your IP Address: @ipadressII</p>
 
 @if (!string.IsNullOrEmpty(BanMessage))
