--- a/ArsaRExCH/Components/Pages/RolesManagerAdmin.razor
+++ b/ArsaRExCH/Components/Pages/RolesManagerAdmin.razor
@@ -1,4 +1,4 @@
-﻿@page "/RoleManager"
+﻿@page "/RoleManagerAdmin"
 @using ArsaRExCH.Data
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
@@ -42,11 +42,11 @@
 
         /* Row styling */
         .grid-row:nth-child(even) .grid-cell {
-            background-color: yellow; /* Light Gray for even rows */
+            background-color: lightgrey; /* Light Gray for even rows */
         }
 
         .grid-row:nth-child(odd) .grid-cell {
-            background-color: red; /* Darker Gray for odd rows */
+            background-color: darkgray; /* Darker Gray for odd rows */
         }
 
         .grid-row:hover .grid-cell {
