soem but fetch eth btc price calculation bet

--- a/ArsaRExCH/Components/MyComponents/B3.razor
+++ b/ArsaRExCH/Components/MyComponents/B3.razor
@@ -50,7 +50,7 @@
 
 <div class="wallet-container">
     <div class="wallet" style="background-color:yellow">
-        <h3>BTC Balanceskkkkk:</h3>
+        <h3>BTC Balances:</h3>
         <ul>
             @foreach (var balance in btcBalances)
             {
