--- a/ArsaRExCH/Components/MyComponents/BetTest2.razor
+++ b/ArsaRExCH/Components/MyComponents/BetTest2.razor
@@ -175,7 +175,9 @@
         BetModel.IsBetActive = true;
         BetModel.ISDeleted = false;
         BetModel.UserIdSec = user2; // Example user ID
-        BetModel.BtcPriceNow = await _priceInterface.GetBtcPriceFromBinance(); // Retrieve current BTC price from the database or API call
+        BetModel.BtcPriceNow = await _priceInterface.GetBtcPriceFromBinance();
+        Console.WriteLine(BetModel.BtcPriceNow);
+        // Retrieve current BTC price from the database or API call
         BetModel.EthPriceNow = await _priceInterface.GetEthPriceFromBinance(); // Retrieve current ETH price from the database or API call
         /*this is shoow ase i just now work on btc*/
         BetModel.OpendBetAtricle = DateTime.UtcNow; // Set the current time as the opening time of the bet
